--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.0.3
   cloud_firestore: ^1.0.5
-  uuid: ^3.0.4
   provider: ^5.0.0
   date_format: ^2.0.2
   google_fonts: ^2.0.0
   firebase_auth: ^1.1.0
   google_sign_in: ^5.0.2
-  rxdart: ^0.26.0
   firebase_analytics: ^8.0.0
+  sign_button: ^1.0.2
 
 dev_dependencies:
   flutter_test:
