--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_sign_in: ^5.0.2
   firebase_analytics: ^8.0.0
   sign_button: ^1.0.2
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
