--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_analytics: ^8.0.0
   sign_button: ^1.0.2
   shared_preferences: ^2.0.5
+  firebase_messaging: ^10.0.3
+  flutter_local_notifications: ^6.0.0
 
 dev_dependencies:
   flutter_test:
